Revised CSS + mobile responsiveness added. | @media queries added.

--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
                         <a href="https://www.facebook.com/andrew.magown" target="_blank"><i class="fa-brands fa-facebook"></i></a>
                         <a href="https://www.instagram.com/magownstown/" target="_blank"><i class="fa-brands fa-instagram"></i></a>
                         <a href="https://twitter.com/Magowntown" target="_blank"><i class="fa-brands fa-twitter"></i></a>
+                        <a href="https://github.com/Magowntown" target="_blank"><i class="fa-brands fa-github"></i></a>
                     </div>
                 </div>
             </div>
