image file path correction for Vercel

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
     <div class="about">
         <div class="main"> 
-            <img class ="profile--pic" src="../aboutMe/images/yuna.jpg">
+            <img class ="profile--pic" src="../images/yuna.jpg">
             <div class="about-text">
                 <h2>About Andrew Magown</h2>
                 <h5>Developer, Data Manipulator, <span>& Video Enthusiast</span></h5>
