--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 
     <link rel="stylesheet" type="text/css" href="style.css">
     <script src="https://kit.fontawesome.com/a30844655f.js" crossorigin="anonymous"></script>
+    <script defer src="/_vercel/insights/script.js"></script>
 </head>
 
 
